--- a/style.css
+++ b/style.css
@@ -38,3 +38,49 @@ transition: .5s;
 nav ul li a:hover , nav ul li a.acitive-nav{
 background-color: #566573;
 }
+#click{
+    display: none;
+}
+.check-box{
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    display: none;
+}
+
+@media  only screen and (max-width:900px){
+    .check-box{
+        display: block;
+    }
+    nav ul{
+        position: fixed;
+        background-color: #5E4B4B;
+        width: 100%;
+        padding: 50px 0;
+        align-items: center;
+        top: 80px;
+        flex-direction: column;
+        left: -100%;
+        transition: all .5s ease;
+        
+    }
+    nav ul li{
+        margin:30px 0;
+    }
+    nav ul li a{
+        font-size: 18px;
+    }
+    nav ul li a:hover,nav ul li a.active-nav{
+        color: red;
+        background:none ;
+    }
+    #click:checked ~ ul{
+        left: 0;
+    }
+    #click:checked ~ .check-box i::before{
+        content: '\f00d';
+    }
+    
+}
+
+   /* responsive navigation code end  hare */
