--- a/style.css
+++ b/style.css
@@ -132,19 +132,414 @@ header{
      margin-bottom: 30px;
      letter-spacing: 3px;
 }
+
    /* services section code end hare */
-@media only screen  and (max-width:688px){
+
+    /* smart area code start hare */
+
+#smart-area-section{
+    background-color: #1B4F72;
+    padding: 50px 0px 100px  0px ;
+}
+.smart-area-title{
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 3px;
+    color: yellow;
+    margin-bottom: 25px;
+}
+.smart-area-parent{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 60px;
+    margin: 0 200px;
+
+}
+
+.smart-area-single-item{
+    color: white;
+    word-break: break-all;
+    word-spacing: 4px;
+}
+.smart-area-single-item h5{
+   font-weight: 600;
+   text-transform: uppercase;
+   margin-bottom: 13px;
+
+}
+.smart-area-single-item h3{
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+.smart-area-single-item a{
+    display: inline-block;
+    margin-top: 30px;
+    padding: 10px 30px;
+    background-color: wheat;
+    text-decoration: none;
+    border-radius: 5px;
+    color: black;
+    transition: .5s;
+    font-weight: 600;
+}
+.smart-area-single-item a:hover{
+    background-color: rgb(177, 173, 173);
+}
+    /* smart area code end hare */
+
+ /* about section code start hare */
+#about-section{
+    background-image:url(img/pe-carl.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 150px 0;
+}
+
+.about-parent{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+    margin: 0 200px;
+}
+
+.about-single-item-1{
+    color: white;
+    width: 950px;
+    
+}
+.about-single-item-1 h3{
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+ 
+.about-single-item-1 ul{
+    list-style-position: inside;
+    margin-top: 15px;
+}
+.about-single-item-1 a{
+    padding: 10px 30px;
+    background-color: yellow;
+    text-decoration: none;
+    border-radius: 5px;
+    color: black;
+    margin-top: 30px;
+    display: inline-block;
+}
+.about-single-item-2{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 30px;
+}
+
+.about-single-item-box{
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 5px;
+    border: 3px solid #32CD32;
+}
+.about-single-item-box h3{
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+
+/* about section code end hare */
+   
+/*  advice section code start hare */
+#advice-section{
+    background-color: #154360;
+}
+
+.advice-parent{
+    display: flex;
+    justify-content: space-between;
+    gap:30px;
+    padding: 100px 0px;
+    margin: 0 200px;
+    color: white;
+}
+.advice-single-item-img{
+    width: 500px;
+    height: 320px;
+}
+.advice-single-item-img img{
+    width: 100%;
+    height: 100%;
+}
+.advice-single-item-text h3{
+    margin-bottom: 20px;
+    font-size: 25px;
+    
+}
+.advice-single-item-text p{
+    text-align: justify;
+}
+.adivce-single-item a{
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    padding: 10px 30px;
+    display: inline-block;
+    margin-top: 25px;
+    margin-right: 10px;
+    border-radius: 40px;
+    transition: .5s;
+}
+.adivce-single-item a:hover{
+    background-color: wheat;
+}
+.advice-icon{
+    text-align: center;
+    font-size: 20px;
+}
+
+.adivce-single-item > h3{
+    font-size: 30px;
+    padding-bottom: 15px;
+    border-bottom:2px solid red ;
+    margin-bottom: 15px;
+}
+.adivce-single-item > p{
+    text-align: justify;
+}
+/*  advice section code end hare  */
+
+/*  contact section code start hare  */
+
+#contact-section{
+    background-image: linear-gradient(#3958a25e,#4089C7), url(img/sy.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 100px 0;
+}
+form{
+    background-color: #2E357A;
+    width: 50%;
+    margin: auto;
+    padding: 60px 50px;
+    text-align: center;
+    border: 5px solid #2185f8;
+    color: white;
+}
+h3{
+    font-size: 30px;
+    margin-bottom: 15px;
+    font-weight: 600;
+}
+.contact-input{
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 50px;
+    background: none;
+    border: none;
+    border-bottom:4px solid #4487D3 ;
+    font-size: 18px;
+    margin-top: 50px;
+    outline: none;
+}
+
+.input-btn{
+    padding: 10px 30px;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    border: 2px solid white;
+    background: none;
+    color: white;
+    transition: .5s;
+    margin-top: 80px;
+}
+.input-btn:hover{
+    background-color: black;
+}
+.contact-input::placeholder{
+    color: #328ffa;
+}
+/*  contact section code end hare  */
+/*  match section code Start hare  */
+
+
+#match-section{
+    background-color: #07254F;
+    color: white;
+
+}
+legend i{
+    font-size: 50px;
+    margin: 0 20px;
+    
+}
+
+.match-parent{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    margin: 0 200px;
+    padding: 100px 0px ;
+    grid-gap: 40px;
+}
+.match-fieldest{
+    padding: 20px;
+    border: 4px solid #328ffa;
+}
+.match-fieldest h4{
+    font-size: 20px;
+    margin-bottom: 15px;
+    
+}
+.match-fieldest p{
+    font-size: 15px;
+    color: #518020;
+}
+/*  match section code end hare  */
+
+/*  takecare section code end hare  */
+.takecare-parent{
+    padding: 50px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 200px;
+}
+.takecare-single1 h2{
+    font-size:35px ;
+    margin-bottom: 20px;
+}
+.takecare-single1 p{
+    margin-bottom: 20px;
+}
+.takecare-single1 ul {
+    list-style-position: inside;
+}
+
+
+.takecare-single2{ 
+    padding: 80px;
+}
+/*  takecare section code start hare  */
+
+@media only screen  and (max-width:900px){
      /* services section code start hare */
     .services-item-parent{
         display: grid;
         grid-template-columns: repeat(1,1fr);
         margin: 0px 30px;
-        grid-gap: 20px;
+        grid-gap: 30px;
     }
      /* services section code end hare */
+
+      /* smart area code start hare */
+      .smart-area-parent{
+        display:block;
+        margin: 0 40px;
+    
+    }
+    .smart-area-single-img img{
+        width: 100%;
+    }
+    .smart-area-single-item{
+        margin-top: 40px;
+    }
+     /* smart area code end hare */
+
+     /* about section code strat hare */
+    .about-parent{
+        display: block;
+        margin: 0 30px;
+    }
+    .about-single-item-1{
+        color: white;
+        width: 100%;
+    }
+    .about-single-item-2{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 30px;
+        margin-top: 50px;
+        width: 100%;
+    }
+    
+    /* about section code end hare */
+    /*  advice section code start hare */
+    #advice-section{
+        background-color: #154360;
+    }
+    
+    .advice-parent{
+        display: block;
+        padding: 50px 0px;
+        margin: 0 30px;
+        
+    }
+    .advice-single-item-img{
+        width: 100%;
+        height: 100%;
+    }
+     
+    .advice-single-item-img img{
+        width: 100%;
+        height: 100%;
+    }
+    
+    .adivce-single-item > h3{
+        margin-top: 50px;
+    }
+
+    .advice-icon{
+        text-align: left;
+    }
+
+    /*  advice section code end hare  */
+
+
+    /*  form section code start hare  */
+     
+     form{
+        width: 84%;
+        padding: 30px 20px;
+     }
+    /*  form section code end hare  */
+
+
+
+    /*  match section code Start hare  */
+
+    .match-parent{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        margin: 0 30px;
+        padding: 50px 0px ;
+        grid-gap: 20px;
+    }
+    /*  match section code end hare  */
+
+    /*  takecare section code start hare  */
+   .takecare-parent{
+        padding: 50px 0px ;
+        display: block;
+        margin: 0px 30px;
+    }
+ 
+
+    .takecare-single2{ 
+        width: 100%;
+        padding: 10px;
+    }
+    .takecare-single2 img{ 
+        width: 100%;
+    }
+
+
+    /*  takecare section code end hare  */
+    
 }
 
-@media only screen  and (min-width:689px) and (max-width:1327px){
+@media only screen  and (min-width:901px) and (max-width:1327px){
      /* services section code start hare */
     .services-item-parent{
         display: grid;
@@ -153,4 +548,89 @@ header{
         grid-gap: 30px;
     }
      /* services section code end hare */
+
+     /* smart area code start hare */
+     .smart-area-parent{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 30px;
+        margin: 0 70px;
+    
+    }
+     /* smart area code end hare */
+
+          /* about section code strat hare */
+    .about-parent{
+        display: block;
+        margin: 0 30px;
+    }
+    .about-single-item-1{
+        color: white;
+        width: 100%;
+    }
+    .about-single-item-2{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 30px;
+        margin-top: 50px;
+        width: 100%;
+    }
+     /* about section code end hare */
+    /*  advice section code start hare */
+    .advice-parent{
+        margin: 0 70px;
+    }
+    .advice-single-item-img{
+        width: 400px;
+        height: 260px;
+    }
+    .advice-single-item-img img{
+        width: 100%;
+        height: 100%;
+    }
+    /*  advice section code end hare  */
+
+    
+    /*  form section code start hare  */
+    
+    form{ 
+        width: 75%;
+        padding: 40px 30px;
+
+     }
+    /*  form section code end hare  */
+
+
+    
+    /*  match section code Start hare  */
+
+    .match-parent{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        margin: 0 70px;
+        padding: 50px 0px ;
+        grid-gap: 30px;
+    }
+    /*  match section code end hare  */
+
+       /*  takecare section code start hare  */
+    .takecare-parent{
+        padding: 50px 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0px 70px;
+    }
+
+
+    .takecare-single2{ 
+        width: 100%;
+        padding: 10px;
+    }
+    .takecare-single2 img{ 
+        width: 100%;
+    }
+/*  takecare section code end hare  */
+
 }
